# pho-vscode-jupyter-cell-tags

./: .cursorignore  .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vscode-jupyter-cell-tags.code-workspace
.cursor/: environment.json
.cursor/plans/: fix_tag_color_rendering_in_tree_view_7372eea4.plan.md  override_notebook_execution_commands_with_tracking_6dd65835.plan.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: PendingNotebookCode.py  extension_test_examples.code-workspace  pyproject.toml
examples/notebooks/: ReviewOfWork_TestNB.ipynb  ReviewOfWork_TestNB.phonb  Simple_TestNB.ipynb
src/: JupyterCellSelectionStatusBar.ts  allNotebookTagsTreeDataProvider.ts  basic.ts  cellTags.ts  cellTagsTreeDataProvider.ts  extension.ts  helper.ts  statusBar.ts
src/cellExecution/: cellExecutionTracking.ts
src/cellHeadings/: commands.ts  startup.ts
src/cellJumpbacks/: JumpbackTreeDataProvider.ts  commands.ts  jumpbackDataSource.ts
src/cellTags/: cellTags.ts  cellTagsTreeDataProvider.ts
src/cellTracker/: CellExecutionTracker.ts  index.ts
src/customOutline/: HeadingParser.ts  IHeadingParser.ts  INotebookOutlineTreeDataProvider.ts  IOutlineSelectionSync.ts  IUpdateCoordinator.ts  NotebookOutlineTreeDataProvider.ts  OutlineSelectionSync.ts  UpdateCoordinator.ts  models.ts  startup.ts
src/exportTags/: exportTags.ts
src/importTags/: importTags.ts
src/models/: tagProperties.ts
src/noteAllTags/: CellTreeItem.ts  TagTreeItem.ts  allNotebookTagsTreeDataProvider.ts  tagSorting.ts
(+42 files in other folders)
