[project]
name = "jupyter-cell-tags-test-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "attrs>=25.4.0",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
]
